# clash-docker

./: Dockerfile  Dockerfile.build-clash  LICENSE  README.md  docker-compose.yaml  requirements.txt  show-ipaddress.sh  start.sh
clashtools/: __init__.py  __main__.py  func.py  generate.py
src/: start.sh
src/clashtools/: __init__.py  __main__.py  defaults.py  func.py  generate.py  pyproject.toml
src/clashtools/utils/: defaults.py  func.py  generate.py
